# prompt_engine

./: .gitignore  AGENT.md  AGENTS.md  README.md
.github/workflows/: backend-ci.yml  ci.yml  desktop-build-ci.yml  frontend-ci.yml
backend/: .env.example  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20240418_0001_initial.py  20240501_0002_add_prompt_item_type_and_tags.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  prompt.py
backend/app/schemas/: __init__.py  library.py  prompt.py
backend/app/services/: __init__.py  prompt_service.py
backend/tests/: conftest.py  test_config_and_session.py  test_main.py
backend/tests/api/: conftest.py  test_prompts_api.py
backend/tests/services/: test_prompt_service.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.test.tsx  main.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: library.rs  main.rs
frontend/src/app/: App.test.tsx  App.tsx  app.css
frontend/src/components/: LanguageSwitcher.tsx  TopNav.test.tsx  TopNav.tsx  language-switcher.css  top-nav.css
frontend/src/i18n/: config.ts
frontend/src/routes/: AppRoutes.test.tsx  AppRoutes.tsx  Connect.tsx  Home.test.tsx  Home.tsx  Launcher.tsx  PromptCatalog.test.tsx  PromptCatalog.tsx  RequireConfig.test.tsx  RequireConfig.tsx  Settings.tsx  Welcome.test.tsx  Welcome.tsx  Workspace.tsx  home.css  launcher.css  onboarding.css  settings.css  welcome.css  workspace.css
frontend/src/services/: apiClient.test.ts  apiClient.ts  libraryClient.test.ts  libraryClient.ts
frontend/src/test/: setup.ts
frontend/tauri/: tauri.conf.json
specs/: api_spec.md  architecture.md  code_guidelines.md  data_models.md  ui_flow.md
tools/ci/: backend_summary.py  frontend_summary.py
(+35 files in other folders)
