[package]
name = "prompt-engine"
version = "0.1.0"
description = "Prompt Engine desktop shell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "clipboard-write-text", "window-show", "window-close", "window-set-focus", "window-hide", "window-create", "global-shortcut"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
