[package]
name = "prompt-engine"
version = "0.1.0"
description = "Prompt Engine desktop shell"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1", features = [ "macos-private-api", "clipboard-write-text", "window-show", "window-close", "window-set-focus", "window-hide", "window-create", "global-shortcut" ] }
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(target_os = "macos")'.dependencies]
tauri = { version = "1", features = ["macos-private-api"] }
core-graphics = "0.23"
objc = "0.2"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
cargo-clippy = []
